# Dawn

./: .gitignore  CMakeLists.txt  Compile.bat  Dawn.sln  Dawn.vcxproj  FaxDown_coding_language.txt  Faxdawn.sln  Faxdawn.vcxproj  Faxdawn.vcxproj.filters  PROTO.txt  README.md  Source.sln  Source.vcxproj  Source.vcxproj.filters  bench.txt  build.json  build.py  dawn.sln  dawn.vcxproj  ideas.txt  info.txt  todo.txt
Examples/: Test.fxdn
Source/Faxdawn/: Faxdawn.cpp  Faxdawn.h
Source/FileIO/: FileIO.cpp  FileIO.h
Source/Lexer/: Lexer.cpp  Token.cpp
Source/Machine/: Machine.cpp  Machine.h
Source/Parser/: Parser.cpp  Parser.h
examples/: bench.dw  dev.dw  full_example.dw  min_example.dw  min_fib.dw  mini.fxdn  test.fxdn  tests.dw
incl/: LineHandler.h  MiscFuncs.h
include/MyStuff/: MyFunc.h  MyGlobal.h  MyStruct.h
res/: test.xdn
source/: Dawn.cpp  Faxdawn.cpp  Faxdawn.h  _dawn.cpp  _dev_main.cpp  _main.cpp  _main.h  _shp_main.cpp  ast.h  btype.cpp  btype.h  compiler.cpp  compiler.h  cpp_helper.h  dawn.cpp  dawn.h  decl.h  display_helper.cpp  display_helper.h  en.cpp  en.h  engine.cpp  engine.h  engine_defaults.cpp  err.cpp  err.h  file_helper.cpp  file_helper.h  global.cpp  global.h  helper.cpp  helper.h  holder.h  id.cpp  id.h  instruction.cpp  instruction.h  lexer.cpp  lexer.h  main.cpp  (+37 more)
source/Compiler/: Compiler.cpp
source/Faxdawn/: Faxdawn.cpp  Faxdawn.h
source/FileIO/: FileIO.cpp
source/IOHandler/: IOHandler.cpp  IOHandler.h
src/: Interpreter.cpp  LineHandler.cpp  MainInterpreter.cpp  MiscFuncs.cpp  MyFunc.cpp
test/: test.xdn
(+77 files in other folders)
